libaudioverse-sys/pregenerated_bindings.rs

} pub type LavPullNodeAudioCallback = :: std :: option :: Option < unsafe extern "C" fn ( nodeHandle : LavHandle , frames : :: std :: os :: raw :: c_int , channels : :: std :: os :: raw :: c_int , buffer : * mut f32 , userdata : * mut :: std :: os :: raw :: c_void ) > ; extern "C" {
 pub fn Lav_createPullNode ( serverHandle : LavHandle , sr : :: std :: os :: raw :: c_uint , channels : :: std :: os :: raw :: c_uint , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_pullNodeSetAudioCallback ( nodeHandle : LavHandle , callback : LavPullNodeAudioCallback , userdata : * mut :: std :: os :: raw :: c_void , ) -> LavError ; 
} pub type LavGraphListenerNodeListeningCallback = :: std :: option :: Option < unsafe extern "C" fn ( nodeHandle : LavHandle , frames : :: std :: os :: raw :: c_uint , channels : :: std :: os :: raw :: c_uint , buffer : * mut f32 , userdata : * mut :: std :: os :: raw :: c_void ) > ; extern "C" {
 pub fn Lav_createGraphListenerNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_uint , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_graphListenerNodeSetListeningCallback ( nodeHandle : LavHandle , callback : LavGraphListenerNodeListeningCallback , userdata : * mut :: std :: os :: raw :: c_void , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createRingmodNode ( serverHandle : LavHandle , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createFeedbackDelayNetworkNode ( serverHandle : LavHandle , maxDelay : f32 , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createIirNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_iirNodeSetCoefficients ( nodeHandle : LavHandle , numeratorLength : :: std :: os :: raw :: c_int , numerator : * mut f64 , denominatorLength : :: std :: os :: raw :: c_int , denominator : * mut f64 , shouldClearHistory : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createGainNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createChannelSplitterNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createChannelMergerNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createBufferNode ( serverHandle : LavHandle , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_bufferNodeSetEndCallback ( nodeHandle : LavHandle , callback : LavParameterlessCallback , userdata : * mut :: std :: os :: raw :: c_void , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createBufferTimelineNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_bufferTimelineNodeScheduleBuffer ( nodeHandle : LavHandle , bufferHandle : LavHandle , time : f64 , pitchBend : f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createRecorderNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_recorderNodeStartRecording ( nodeHandle : LavHandle , path : * const :: std :: os :: raw :: c_char , ) -> LavError ; 
} extern "C" {
 pub fn Lav_recorderNodeStopRecording ( nodeHandle : LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createConvolverNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createFftConvolverNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_fftConvolverNodeSetResponse ( nodeHandle : LavHandle , channel : :: std :: os :: raw :: c_int , length : :: std :: os :: raw :: c_int , response : * mut f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_fftConvolverNodeSetResponseFromFile ( nodeHandle : LavHandle , path : * const :: std :: os :: raw :: c_char , fileChannel : :: std :: os :: raw :: c_int , convolverChannel : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createThreeBandEqNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createFilteredDelayNode ( serverHandle : LavHandle , maxDelay : f32 , channels : :: std :: os :: raw :: c_uint , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createCrossfaderNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , inputs : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_crossfaderNodeCrossfade ( nodeHandle : LavHandle , duration : f32 , input : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_crossfaderNodeSetFinishedCallback ( nodeHandle : LavHandle , callback : LavParameterlessCallback , userdata : * mut :: std :: os :: raw :: c_void , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createOnePoleFilterNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createFirstOrderFilterNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_firstOrderFilterNodeConfigureLowpass ( nodeHandle : LavHandle , frequency : f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_firstOrderFilterNodeConfigureHighpass ( nodeHandle : LavHandle , frequency : f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_firstOrderFilterNodeConfigureAllpass ( nodeHandle : LavHandle , frequency : f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createAllpassNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , maxDelay : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createFdnReverbNode ( serverHandle : LavHandle , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createBlitNode ( serverHandle : LavHandle , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createDcBlockerNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createLeakyIntegratorNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createFileStreamerNode ( serverHandle : LavHandle , path : * const :: std :: os :: raw :: c_char , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_fileStreamerNodeSetEndCallback ( nodeHandle : LavHandle , callback : LavParameterlessCallback , userdata : * mut :: std :: os :: raw :: c_void , ) -> LavError ; 
